--- a/t_commerce_app/pubspec.yaml
+++ b/t_commerce_app/pubspec.yaml
@@ -18,17 +18,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  sqflite:
+  path:
+  flutter_spinkit: ^5.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   flutter_test:
