--- a/t_commerce_app/pubspec.yaml
+++ b/t_commerce_app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path:
   flutter_spinkit: ^5.0.0
   uuid: ^3.0.2
+  provider: ^5.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
