--- a/t_commerce_app/ios/Runner/Info.plist
+++ b/t_commerce_app/ios/Runner/Info.plist
@@ -41,5 +41,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app need to access to your photo library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app need to access to your camera</string>
 </dict>
 </plist>
