--- a/t_commerce_app/pubspec.yaml
+++ b/t_commerce_app/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   flutter_spinkit: ^5.0.0
   uuid: ^3.0.2
   provider: ^5.0.0
-
+  image_picker: ^0.7.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
