--- a/t_commerce_app/pubspec.yaml
+++ b/t_commerce_app/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   provider: ^5.0.0
   image_picker: ^0.7.3
   flutter_barcode_scanner: ^2.0.0-nullsafety.0
+  multi_image_picker: ^4.8.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
